--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -8,7 +8,7 @@
         <div class="content-detail-header mt-4 mb-5">
             <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New Account</button>
             <form action="/admin/admin-accounts/search" class="content-detail-header-search" method="GET">
-                <input type="search" class="form-control" placeholder="Search by email or name..." aria-label="Recipient's username" aria-describedby="basic-addon2" name="q">
+                <input type="search" class="form-control" placeholder="Search by email or name..." name="q">
                 <button style="width: 90px;" class="btn btn-outline-primary" type="submit">
                     <i class="bi bi-search"></i>
                 </button>
