--- a/src/views/admin/trainerDetail.hbs
+++ b/src/views/admin/trainerDetail.hbs
@@ -4,14 +4,15 @@
 <body>
     {{> adminLayout}}
     <main class="content-detail" id="common_content-area">
-        <a href="/admin/admin-accounts" class="btn btn-link fs-5 mt-4">
+        <a href="/admin/trainer-accounts" class="btn btn-link fs-5 mt-4">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <h2 class="text-center mt-4 text-primary">Admin Account Detail</h2>
+        <h2 class="text-center mt-4 text-primary">Trainer Account Detail</h2>
         <table class="table table-bordered caption-top mt-4" style="width: 100%;">
             <thead class="">
                 <tr style="font-size: 18px; text-align: center;">
                     <th scope="col">Full Name</th>
+                    <th scope="col">Specialty</th>
                     <th scope="col">Age</th>
                     <th scope="col">Birthday</th>
                     <th scope="col">Address</th>
@@ -22,20 +23,21 @@
             </thead>
             <tbody>
                 <tr>
-                    <td scope="col" style="text-align: center;">{{admin.name}}</td>
-                    <td scope="col" style="text-align: center;">{{calculateAge admin.dob}}</td>
-                    <td scope="col" style="text-align: center;">{{admin.dob}}</td>       
-                    <td scope="col">{{admin.address}}</td>
+                    <td scope="col" style="text-align: center;">{{trainer.name}}</td>
+                    <td scope="col" style="text-align: center;">{{trainer.specialty}}</td>
+                    <td scope="col" style="text-align: center;">{{calculateAge trainer.dob}}</td>
+                    <td scope="col" style="text-align: center;">{{trainer.dob}}</td>       
+                    <td scope="col">{{trainer.address}}</td>
                     <td scope="col" style="text-align: center; max-width: 220px;">
-                        <a href="/admin/admin-accounts/edit?id={{admin._id}}" class="btn btn-primary js-edit-info">
+                        <a href="/admin/trainer-accounts/edit?id={{trainer._id}}" class="btn btn-primary js-edit-info">
                             <i class="bi bi-pencil-square"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                         </a>
-                        <a href="" class="btn btn-danger" data-bs-toggle="modal" data-id="{{admin._id}}" data-bs-target="#delete-item-modal">
+                        <a href="" class="btn btn-danger" data-bs-toggle="modal" data-id="{{trainer._id}}" data-bs-target="#delete-item-modal">
                             <i class="bi bi-x-lg"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                         </a>
-                        <a href="/admin/admin-accounts/passwords/set_default?id={{admin._id}}" class="btn btn-warning">
+                        <a href="/admin/trainer-accounts/passwords/set_default?id={{trainer._id}}" class="btn btn-warning">
                             <i class="bi bi-gear"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
                         </a>
@@ -63,7 +65,7 @@
             </div>
         </div>
     </div>
-    <form name="delete-item-form" action="/admin/admin-accounts/delete">
+    <form name="delete-item-form" action="/admin/trainer-accounts/delete">
         <input type="hidden" name="id" value="">
     </form>
 
