--- a/src/views/staff/editTrainee.hbs
+++ b/src/views/staff/editTrainee.hbs
@@ -29,6 +29,10 @@
                 <input type="text" class="form-control" id="fullName" name="name" value="{{trainee.name}}" required placeholder="Your full name...">
             </div>
             <div class="col-12">
+                <label for="code" class="form-label">Code</label>
+                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" required placeholder="Your code...">
+            </div>
+            <div class="col-12">
                 <label for="education" class="form-label">Education</label>
                 <input type="text" class="form-control" id="education" name="education" value="{{trainee.education}}" required placeholder="Your education...">
             </div>
