--- a/src/views/admin/admin-accounts.hbs
+++ b/src/views/admin/admin-accounts.hbs
@@ -55,15 +55,15 @@
                             <td scope="col">{{this.email}}</td>
                             <td scope="col" style="text-align: center;">{{this.name}}</td>
                             <td style="text-align: center; max-width: 350px;">
-                                <a href="/admin/admin-accounts/edit?id={{this._id}}" class="btn btn-primary js-edit-info">
+                                <a href="/admin/admin-accounts/edit?id={{this._id}}" class="btn btn-primary js-edit-info mb-1">
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                                 </a>
-                                <a href="" class="btn btn-danger" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
+                                <a href="" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
                                     <i class="bi bi-x-lg"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                                 </a>
-                                <a href="/admin/admin-accounts/passwords/set_default?id={{this._id}}" class="btn btn-warning">
+                                <a href="/admin/admin-accounts/passwords/set_default?id={{this._id}}" class="btn btn-warning mb-1">
                                     <i class="bi bi-gear"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
                                 </a>
