--- a/src/views/admin/trainer-accounts.hbs
+++ b/src/views/admin/trainer-accounts.hbs
@@ -57,15 +57,15 @@
                             <td scope="col" style="text-align: center;">{{this.name}}</td>
                             <td scope="col" style="text-align: center;">{{this.code}}</td>
                             <td style="text-align: center; max-width: 350px;">
-                                <a href="/admin/trainer-accounts/edit?id={{this._id}}" class="btn btn-primary js-edit-info">
+                                <a href="/admin/trainer-accounts/edit?id={{this._id}}" class="btn btn-primary js-edit-info mb-1">
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                                 </a>
-                                <a href="" class="btn btn-danger" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
+                                <a href="" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
                                     <i class="bi bi-x-lg"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                                 </a>
-                                <a href="/admin/trainer-accounts/passwords/set_default?id={{this._id}}" class="btn btn-warning">
+                                <a href="/admin/trainer-accounts/passwords/set_default?id={{this._id}}" class="btn btn-warning mb-1">
                                     <i class="bi bi-gear"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
                                 </a>
@@ -93,7 +93,7 @@
                 <div>
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." minlength="12" maxlength="40" required>
-                    <span class="msg" id="email-msg">{{msg}}</span>
+                    <span class="msg" id="email-msg">{{msg.s1}}</span>
                 </div>
                 <div>
                     <label for="name" class="form-label">Full name</label>
@@ -103,7 +103,7 @@
                 <div>
                     <label for="code" class="form-label">Code</label>
                     <input type="text" class="form-control" name="code" id="code" placeholder="Your code..." minlength="4" maxlength="20" required>
-                    <span class="msg" id="code-msg">{{msg}}</span>
+                    <span class="msg" id="code-msg">{{msg.s2}}</span>
                 </div>
                 <div>   
                     <label for="specialty" class="">Specialty</label>
