update atribute in models to profile

--- a/src/views/trainee/profile.hbs
+++ b/src/views/trainee/profile.hbs
@@ -95,6 +95,12 @@
                     </span>
                     <span>{{trainee.name}}</span>
                 </div>
+                <div class="row mt-3" style="margin-right: 20px;">
+                    <span style=" color: rgb(44, 44, 44); font-weight: 500;">
+                        Code:
+                    </span>
+                    <span>{{trainee.code}}</span>
+                </div>
                 <div class="row mt-3" style="margin-right: 60px;">
                     <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
                         Age:
