--- a/src/views/staff/profile.hbs
+++ b/src/views/staff/profile.hbs
@@ -3,7 +3,7 @@
 {{> head}}
 <style>
     body {
-    background: rgb(99, 39, 120)
+    background: rgb(245, 245, 245)
 }
 .margin{
     margin-top: -24px;
@@ -70,7 +70,6 @@
             <a href="/{{user.role}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <a href="/{{removeSpace user.name}}/change_password" class="btn btn-link">Change Password</a>
 
     <div class="row" style="margin-top: -25px;">
         <div class="col-md-3" style="margin-left: 150px; margin-top: 25px">
@@ -82,18 +81,6 @@
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center">
                     <h4 style= "margin-left: 0px; color: rgb(94, 94, 94); font-size: xx-large">Profile Settings</h4>
-                </div>
-                <div class="row mt-3">
-                    <span style=" color: rgb(44, 44, 44); font-weight: 500;">
-                        Email:
-                    </span>
-                    <span>{{staff.email}}</span>
-                </div>
-                <div class="row mt-3" style="margin-right: 20px;">
-                    <span style=" color: rgb(44, 44, 44); font-weight: 500;">
-                        Full Name:
-                    </span>
-                    <span>{{staff.name}}</span>
                 </div>
                 <div class="row mt-3" style="margin-right: 60px;">
                     <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
@@ -119,8 +106,11 @@
                                     Edit Profile
                                 </a>
                             </button>
-                        </div>
-            </div>
+                            <button type="button" class="btn btn-success js-edit-info btn btn-primary profile-button">
+                                <a href="/{{removeSpace user.name}}/change_password" class="underline-white">Change Password</a>
+                            </button>
+                </div>
+                </div>
         </div>
     </div>
 </div>
