--- a/src/views/admin/trainer-accounts.hbs
+++ b/src/views/admin/trainer-accounts.hbs
@@ -3,78 +3,81 @@
 {{> head}}
 <body>
     {{> adminLayout}}
-
-    <main class="content-detail" id="content-detail">
+    <main class="content-detail" id="common_content-area">
         <h3 class="fs-4 mt-5">Accounts (~ {{total}} records)</h3>
-        <div class="content-detail-header mt-4">
-            <button type="button" class="btn btn-primary fs-5 js-add-info" style="font-weight: 500;">New Account</button>
+        <div class="content-detail-header mt-4 mb-5">
+            <button type="button" class="btn btn-outline-primary fs-5 js-add-info" style="font-weight: 500;">New Account</button>
             <form action="/admin/trainer-accounts/search" class="content-detail-header-search" method="GET">
-                <input type="search" class="form-control" placeholder="Search by email or name..." aria-label="Recipient's username" aria-describedby="basic-addon2" name="q">
-                <button style="width: 90px;" class="btn btn-primary" type="submit">
+                <input type="search" class="form-control" placeholder="Search by email or name..." name="q">
+                <button style="width: 90px;" class="btn btn-outline-primary" type="submit">
                     <i class="bi bi-search"></i>
                 </button>
             </form>
         </div>
+        {{#if flashMsgs.success}}
+            <div class="container text-center alert alert-success col-8 fs-5 mt-5" id="flashMsg">
+                <span>{{flashMsgs.success}}</span>
+                <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+            </div>
+        {{/if}}
+        {{#if flashMsgs.error}}
+            <div class="container text-center alert alert-danger col-8 fs-5 mt-5" id="flashMsg">
+                <span>{{flashMsgs.error}}</span>
+                <i class="bi bi-x-lg" style="margin-left: 10px; cursor: pointer;" onclick="closeFlashMsg();"></i>
+            </div>
+        {{/if}}
         {{#if trainers}}
-        <table class="table table-hover table-bordered caption-top mt-5" style="width: 100%;">
-            <thead class="table-light">
-                <tr style="font-size: 18px; text-align: center;">
-                    <th scope="col">#</th>
-                    <th scope="col" style="width: 190px;">Avatar</th>
-                    <th scope="col" style="width: 150px;">Email</th>
-                    <th scope="col">Full name</th>
-                    <th scope="col">Code</th>
-                    <th scope="col" style="width: 90px;">Specialty</th>
-                    <th scope="col" style="width: 60px;">Age</th>
-                    <th scope="col" style="width: 130px;">Date of birth</th>
-                    <th scope="col">Address</th>
-                    <th scope="col" style="width: 220px;">
-                        <i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Action</span>
-                    </th>
-                </tr>
-            </thead>
-            <tbody>
-                {{#each trainers}}
-                <tr>
-                    <th scope="row" style="text-align: center;">{{@index}}</th>
-                    <td scope="col">
-                        <div class="text-center">
-                            <img style="width: 170px; height: 170px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="" class="img-thumbnail">
-                        </div>
-                    </td>
-                    <td scope="col">{{this.email}}</td>
-                    <td scope="col" style="text-align: center;">{{this.name}}</td>
-                    <td scope="col" style="text-align: center;">{{this.code}}</td>
-                    <td scope="col" style="text-align: center;">{{this.specialty}}</td>
-                    <td scope="col" style="text-align: center;">{{calculateAge this.dob}}</td>
-                    <td scope="col" style="text-align: center;">{{this.dob}}</td>       
-                    <td scope="col">{{this.address}}</td>
-                    <td style="text-align: center;">
-                        <div>
-                            <div class="btn-group" style="z-index: 0; height: 40px; width: 199px;" role="group" aria-label="Basic mixed styles example">
-                                <a href="/admin/trainer-accounts/edit?id={{this._id}}" class="btn btn-success js-edit-info" style="border-bottom-left-radius: unset;">
+            <h2 class="text-center mt-4 text-primary">List of Trainer Accounts</h2>
+            <table class="table table-bordered caption-top mt-4" style="width: 100%;">
+                {{!-- <caption class="fs-5"></caption> --}}
+                <thead class="">
+                    <tr style="font-size: 18px; text-align: center;">
+                        <th scope="col">#</th>
+                        <th scope="col" style="min-width: 190px;">Avatar</th>
+                        <th scope="col">Email</th>
+                        <th scope="col">Full Name</th>
+                        <th scope="col">Code</th>
+                        <th scope="col">
+                            <i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Actions</span>
+                        </th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {{#each trainers}}
+                        <tr>
+                            <th scope="row" style="text-align: center;">{{@index}}</th>
+                            <td scope="col">
+                                <div class="text-center">
+                                    <a href="/admin/trainer-account/{{this._id}}">
+                                        <img style="width: 170px; height: 170px;" src="data:image/{{this.image.contentType}};base64,{{convertImage this.image.data}}" alt="" class="img-thumbnail">
+                                    </a>
+                                </div>
+                            </td>
+                            <td scope="col">{{this.email}}</td>
+                            <td scope="col" style="text-align: center;">{{this.name}}</td>
+                            <td scope="col" style="text-align: center;">{{this.code}}</td>
+                            <td style="text-align: center; max-width: 350px;">
+                                <a href="/admin/trainer-accounts/edit?id={{this._id}}" class="btn btn-primary js-edit-info mb-1">
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                                 </a>
-                                <a href="" class="btn btn-danger" style="border-bottom-right-radius: unset;" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
+                                <a href="" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
                                     <i class="bi bi-x-lg"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                                 </a>
-                            </div>
-                            <a href="/admin/trainer-accounts/passwords/set_default?id={{this._id}}" class="btn btn-warning" style="height: 40px; border-top-left-radius: unset; border-top-right-radius: unset;">
-                                <i class="bi bi-gear"></i>
-                                <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
-                            </a>
-                        </div>
-                    </td>
-                </tr>
-                {{/each}}
-            </tbody>
-        </table>
+                                <a href="/admin/trainer-accounts/passwords/set_default?id={{this._id}}" class="btn btn-warning mb-1">
+                                    <i class="bi bi-gear"></i>
+                                    <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
+                                </a>
+                            </td>
+                        </tr>
+                    {{/each}}
+                </tbody>
+            </table>
         {{else}}
-        <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
-            <span>No results found for query "{{q}}"</span>
-        </div>
+            <div class="text-center fs-3" style="margin-top: 140px; color: #198754;">
+                <span>No results found for query "{{q}}"</span>
+            </div>
         {{/if}}
     </main>
 
@@ -90,7 +93,7 @@
                 <div>
                     <label for="email" class="form-label">Email address</label>
                     <input type="email" class="form-control" name="email" id="email" placeholder="Your email..." minlength="12" maxlength="40" required>
-                    <span class="msg" id="email-msg">{{msg}}</span>
+                    <span class="msg" id="email-msg">{{msg.s1}}</span>
                 </div>
                 <div>
                     <label for="name" class="form-label">Full name</label>
@@ -100,7 +103,7 @@
                 <div>
                     <label for="code" class="form-label">Code</label>
                     <input type="text" class="form-control" name="code" id="code" placeholder="Your code..." minlength="4" maxlength="20" required>
-                    <span class="msg" id="code-msg">{{msg}}</span>
+                    <span class="msg" id="code-msg">{{msg.s2}}</span>
                 </div>
                 <div>   
                     <label for="specialty" class="">Specialty</label>
