--- a/src/views/staff/profile.hbs
+++ b/src/views/staff/profile.hbs
@@ -3,7 +3,7 @@
 {{> head}}
 <style>
     body {
-    background: rgb(99, 39, 120)
+    background:  #d6d6c2
 }
 .margin{
     margin-top: -24px;
@@ -61,16 +61,9 @@
     {{> staffLayout}}
     <main >
     <div class="container rounded bg-white mb-5;" style="margin-top: 120px; width: 900px;">
-        <div>
-            <div class="text-center" style="border-bottom: 1px solid rgb(192, 192, 192);">
-                <a href="/{{user.role}}">
-                    <img src="/images/header/logo.png" alt="" width="150px">
-                </a>
-            </div>
-            <a href="/{{user.role}}" class="btn btn-link fs-5">
+        <a href="/{{user.role}}" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
-        </a>
-        <a href="/{{removeSpace user.name}}/change_password" class="btn btn-link">Change Password</a>
+            </a>
 
     <div class="row" style="margin-top: -25px;">
         <div class="col-md-3" style="margin-left: 150px; margin-top: 25px">
@@ -82,18 +75,6 @@
             <div class="p-3 py-5">
                 <div class="d-flex justify-content-between align-items-center">
                     <h4 style= "margin-left: 0px; color: rgb(94, 94, 94); font-size: xx-large">Profile Settings</h4>
-                </div>
-                <div class="row mt-3">
-                    <span style=" color: rgb(44, 44, 44); font-weight: 500;">
-                        Email:
-                    </span>
-                    <span>{{staff.email}}</span>
-                </div>
-                <div class="row mt-3" style="margin-right: 20px;">
-                    <span style=" color: rgb(44, 44, 44); font-weight: 500;">
-                        Full Name:
-                    </span>
-                    <span>{{staff.name}}</span>
                 </div>
                 <div class="row mt-3" style="margin-right: 60px;">
                     <span style="display: block; color: rgb(44, 44, 44); font-weight: 500;">
@@ -114,13 +95,15 @@
                     <span>{{staff.address}}</span>
                 </div>
                 <div class="mt-4 text-center" >
-                            <button type="button" class="btn btn-success js-edit-info btn btn-primary profile-button">
-                                <a class ="underline-white" href="/{{removeSpace user.name}}/edit_profile?id={{staff._id}}">
-                                    Edit Profile
+                            
+                                <a class="underline-white"href="/{{removeSpace user.name}}/edit_profile?id={{staff._id}}">
+                                    <button type="button" class="btn btn-outline-primary fs-5" style="font-weight: 400;">Edit Profile</button>
                                 </a>
-                            </button>
-                        </div>
-            </div>
+                                <a href="/{{removeSpace user.name}}/change_password">
+                                    <button type="button" class="btn btn-outline-primary fs-5" style="font-weight: 400;">Change Password</button>
+                                </a>
+        </div>
+        </div>
         </div>
     </div>
 </div>
