--- a/src/views/trainer/gradeTrainees.hbs
+++ b/src/views/trainer/gradeTrainees.hbs
@@ -2,13 +2,13 @@
 <html lang="en">
 {{> head}}
 <body>
-    {{> staffLayout}}
+    {{> traineeLayout}}
 
     <main class="content-detail" id="common_content-area">
-        <a href="/staff/profile" class="btn btn-link fs-5">
+        <a href="/trainer/viewGrade" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/staff/update?id={{data._id}}" enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/trainee/update?id={{data._id}}" enctype="multipart/form-data">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{data.image.contentType}};base64,{{convertImage data.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
@@ -20,23 +20,26 @@
                 <label class="input-group-text" style="cursor: pointer;" for="btn-upload-img">Upload</label>
             </div>
 
-        <div class="col-12">
-                <label for="email" class="form-label">Email</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{data.email}}" required placeholder="Your email address...">
+         <div class="col-12">
+                <label for="email" class="form-label">Code</label>
+                <input type="email" class="form-control" id="email" name="email" value="{{data.email}}" required>
             </div>
             <div class="col-12">
-                <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{data.name}}" required placeholder="Your full name...">
+                <label for="fullName" class="form-label">Course Name</label>
+                <input type="text" class="form-control" id="fullName" name="name" value="{{data.name}}" required>
             </div>
             <div class="col-12">
-                <label for="dob" class="form-label">Date of birth</label>
-                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate data.dob}}" required >
+                <label for="dob" class="form-label">Trainer</label>
+                <input type="date" class="form-control" id="dob" name="dob" value="{{convertDate data.dob}}" required>
             </div>
             <div class="mb-3">
-                <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{data.address}}</textarea>
+                <label for="address" class="form-label">Class</label>
+                <textarea class="form-control" id="address" rows="3" name="address" required>{{data.address}}</textarea>
             </div>
-                <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
+            <div class="mb-3">
+                <label for="education" class="form-label">Grade</label>
+                <textarea class="form-control" id="education" rows="3" name="education" required>{{data.address}}</textarea>
+            </div>
             <div class="col-12 mt-5">
                 <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
