--- a/src/views/admin/editStaff.hbs
+++ b/src/views/admin/editStaff.hbs
@@ -41,7 +41,7 @@
             </div>
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
-                <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
+                <button type="submit" class="btn btn-outline-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
                 </button>
             </div>
