--- a/src/views/admin/editTrainer.hbs
+++ b/src/views/admin/editTrainer.hbs
@@ -26,7 +26,7 @@
                 <span class="msg" id="email-msg"></span>
             </div>
             <div class="col-12">
-                <label for="fullName" class="form-label">Full name</label>
+                <label for="fullName" class="form-label">Full Name</label>
                 <input type="text" class="form-control" id="name" name="name" value="{{trainer.name}}" required placeholder="Your full name..." minlength="5" maxlength="30">
                 <span class="msg" id="name-msg"></span>
             </div>
@@ -51,7 +51,7 @@
             </div>
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
-                <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
+                <button type="submit" class="btn btn-outline-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
                 </button>
             </div>
