--- a/src/views/admin/staff-accounts.hbs
+++ b/src/views/admin/staff-accounts.hbs
@@ -52,9 +52,9 @@
                                     </a>
                                 </div>
                             </td>
-                            <td scope="col">{{this.email}}</td>
+                            <td scope="col" class="text-center">{{this.email}}</td>
                             <td scope="col" style="text-align: center;">{{this.name}}</td>
-                            <td style="text-align: center; max-width: 350px;">
+                            <td style="text-align: center; width: 34%;">
                                 <a href="/admin/staff-accounts/edit?id={{this._id}}" class="btn btn-primary js-edit-info mb-1">
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Edit</span>
