--- a/src/views/admin/trainer-accounts.hbs
+++ b/src/views/admin/trainer-accounts.hbs
@@ -53,15 +53,15 @@
                                     </a>
                                 </div>
                             </td>
-                            <td scope="col">{{this.email}}</td>
+                            <td scope="col" class="text-center">{{this.email}}</td>
                             <td scope="col" style="text-align: center;">{{this.name}}</td>
                             <td scope="col" style="text-align: center;">{{this.code}}</td>
-                            <td style="text-align: center; max-width: 350px;">
+                            <td style="text-align: center; width: 34%;">
                                 <a href="/admin/trainer-accounts/edit?id={{this._id}}" class="btn btn-primary js-edit-info mb-1">
                                     <i class="bi bi-pencil-square"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                                 </a>
-                                <a href="" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
+                                <a href="#" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{this._id}}" data-bs-target="#delete-item-modal">
                                     <i class="bi bi-x-lg"></i>
                                     <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                                 </a>
@@ -106,7 +106,7 @@
                     <span class="msg" id="code-msg">{{msg.s2}}</span>
                 </div>
                 <div>   
-                    <label for="specialty" class="">Specialty</label>
+                    <label for="specialty" class="form-label">Specialty</label>
                     <input type="text" class="form-control" name="specialty" id="specialty" required placeholder="Your specialty..." minlength="2" maxlength="20">
                     <span class="msg" id="specialty-msg"></span>
                 </div>
