--- a/src/views/admin/trainerDetail.hbs
+++ b/src/views/admin/trainerDetail.hbs
@@ -28,16 +28,16 @@
                     <td scope="col" style="text-align: center;">{{calculateAge trainer.dob}}</td>
                     <td scope="col" style="text-align: center;">{{trainer.dob}}</td>       
                     <td scope="col">{{trainer.address}}</td>
-                    <td scope="col" style="text-align: center; max-width: 220px;">
-                        <a href="/admin/trainer-accounts/edit?id={{trainer._id}}" class="btn btn-primary js-edit-info ">
+                    <td scope="col" style="text-align: center; width: 34%;">
+                        <a href="/admin/trainer-accounts/edit?id={{trainer._id}}" class="btn btn-primary js-edit-info mb-1">
                             <i class="bi bi-pencil-square"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                         </a>
-                        <a href="" class="btn btn-danger " data-bs-toggle="modal" data-id="{{trainer._id}}" data-bs-target="#delete-item-modal">
+                        <a href="#" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{trainer._id}}" data-bs-target="#delete-item-modal">
                             <i class="bi bi-x-lg"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                         </a>
-                        <a href="/admin/trainer-accounts/passwords/set_default?id={{trainer._id}}" class="btn btn-warning ">
+                        <a href="/admin/trainer-accounts/passwords/set_default?id={{trainer._id}}" class="btn btn-warning mb-1">
                             <i class="bi bi-gear"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
                         </a>
