--- a/src/views/staff/editTrainee.hbs
+++ b/src/views/staff/editTrainee.hbs
@@ -3,12 +3,11 @@
 {{> head}}
 <body>
     {{> staffLayout}}
-
     <main class="content-detail" id="common_content-area">
         <a href="/staff/trainee-accounts" class="btn btn-link fs-5">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <form class="row g-3 mt-4" method="POST" action="/staff/trainee-accounts/update?id={{trainee._id}}" enctype="multipart/form-data">
+        <form class="row g-3 mt-4" method="POST" action="/staff/trainee-accounts/update?id={{trainee._id}}" enctype="multipart/form-data" onsubmit="return validateTraineeAcc();">
             <div class="text-left">
                 <img style="width: 170px; height: 170px; margin-right: 20px;" src="data:image/{{trainee.image.contentType}};base64,{{convertImage trainee.image.data}}" alt="" class="img-thumbnail">
                 <div class="chosen_image-container">
@@ -22,19 +21,23 @@
 
             <div class="col-12">
                 <label for="email" class="form-label">Email Address</label>
-                <input type="email" class="form-control" id="email" name="email" value="{{trainee.email}}" required placeholder="Your email address...">
+                <input type="email" class="form-control" id="email" name="email" value="{{trainee.email}}" required placeholder="Your email address..." minlength="12" maxlength="40">
+                <span class="msg" id="email-msg"></span>
             </div>
             <div class="col-12">
-                <label for="fullName" class="form-label">Full name</label>
-                <input type="text" class="form-control" id="fullName" name="name" value="{{trainee.name}}" required placeholder="Your full name...">
+                <label for="name" class="form-label">Full Name</label>
+                <input type="text" class="form-control" id="name" name="name" value="{{trainee.name}}" required placeholder="Your full name..." minlength="5" maxlength="30">
+                <span class="msg" id="name-msg"></span>
             </div>
             <div class="col-12">
                 <label for="code" class="form-label">Code</label>
-                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" required placeholder="Your code...">
+                <input type="text" class="form-control" id="code" name="code" value="{{trainee.code}}" required placeholder="Your code..." minlength="4" maxlength="20">
+                <span class="msg" id="code-msg"></span>
             </div>
             <div class="col-12">
                 <label for="education" class="form-label">Education</label>
-                <input type="text" class="form-control" id="education" name="education" value="{{trainee.education}}" required placeholder="Your education...">
+                <input type="text" class="form-control" id="education" name="education" value="{{trainee.education}}" required placeholder="Your education..." minlength="2" maxlength="20">
+                <span class="msg" id="education-msg"></span>
             </div>
             <div class="col-12">
                 <label for="dob" class="form-label">Date of birth</label>
@@ -42,17 +45,20 @@
             </div>
             <div class="mb-3">
                 <label for="address" class="form-label">Address</label>
-                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address...">{{trainee.address}}</textarea>
+                <textarea class="form-control" id="address" rows="3" name="address" required placeholder="Your address..." minlength="6" maxlength="100">{{trainee.address}}</textarea>
+                <span class="msg" id="address-msg"></span>
             </div>
                 <input type="file" class="form-control" id="btn-upload-img" name="image" accept="image/*" hidden>
             <div class="col-12 mt-5">
-                <button type="submit" class="btn btn-primary fs-5" style="font-weight: 500;">Update
+                <button type="submit" class="btn btn-outline-primary fs-5" style="font-weight: 500;">Update
                     <i class="bi bi-check2 fs-5"></i>
                 </button>
             </div>
         </form>
     </main>
-
-{{> bottom}}
+    <script>
+        previewImageAndClose();
+    </script>
+{{> frameworkCDN}}
 </body>
 </html>
