--- a/src/views/staff/traineeDetail.hbs
+++ b/src/views/staff/traineeDetail.hbs
@@ -2,19 +2,20 @@
 <html lang="en">
 {{> head}}
 <body>
-    {{> adminLayout}}
+    {{> staffLayout}}
     <main class="content-detail" id="common_content-area">
-        <a href="/admin/admin-accounts" class="btn btn-link fs-5 mt-4">
+        <a href="/staff/trainee-accounts" class="btn btn-link fs-5 mt-4">
             <i class="bi bi-arrow-return-left" style="margin-right: 5px;"></i>Back
         </a>
-        <h2 class="text-center mt-4 text-primary">Admin Account Detail</h2>
+        <h2 class="text-center mt-4 text-primary">Trainee Account Detail</h2>
         <table class="table table-bordered caption-top mt-4" style="width: 100%;">
             <thead class="">
                 <tr style="font-size: 18px; text-align: center;">
                     <th scope="col">Full Name</th>
+                    <th scope="col">Education</th>
                     <th scope="col">Age</th>
                     <th scope="col">Birthday</th>
-                    <th scope="col">Address</th>
+                    <th scope="col">Address</th> 
                     <th scope="col">
                         <i class="bi bi-tools fs-5"></i><span style="margin-left: 12px;">Actions</span>
                     </th>
@@ -22,20 +23,21 @@
             </thead>
             <tbody>
                 <tr>
-                    <td scope="col" style="text-align: center;">{{admin.name}}</td>
-                    <td scope="col" style="text-align: center;">{{calculateAge admin.dob}}</td>
-                    <td scope="col" style="text-align: center;">{{admin.dob}}</td>       
-                    <td scope="col">{{admin.address}}</td>
+                    <td scope="col" style="text-align: center;">{{trainee.name}}</td>
+                    <td scope="col" style="text-align: center;">{{trainee.education}}</td>
+                    <td scope="col" style="text-align: center;">{{calculateAge trainee.dob}}</td>
+                    <td scope="col" style="text-align: center;">{{trainee.dob}}</td>       
+                    <td scope="col">{{trainee.address}}</td>
                     <td scope="col" style="text-align: center; width: 34%;">
-                        <a href="/admin/admin-accounts/edit?id={{admin._id}}" class="btn btn-primary js-edit-info mb-1">
+                        <a href="/staff/trainee-accounts/edit?id={{trainee._id}}" class="btn btn-primary js-edit-info mb-1">
                             <i class="bi bi-pencil-square"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Edit</span>
                         </a>
-                        <a href="" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{admin._id}}" data-bs-target="#delete-item-modal">
+                        <a href="#" class="btn btn-danger mb-1" data-bs-toggle="modal" data-id="{{trainee._id}}" data-bs-target="#delete-item-modal">
                             <i class="bi bi-x-lg"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Delete</span>
                         </a>
-                        <a href="/admin/admin-accounts/passwords/set_default?id={{admin._id}}" class="btn btn-warning mb-1">
+                        <a href="/staff/trainee-accounts/passwords/set_default?id={{trainee._id}}" class="btn btn-warning mb-1">
                             <i class="bi bi-gear"></i>
                             <span class=" fs-6" style="margin-left: 5px;">Set default password</span>
                         </a>
@@ -63,7 +65,7 @@
             </div>
         </div>
     </div>
-    <form name="delete-item-form" action="/admin/admin-accounts/delete">
+    <form name="delete-item-form" action="/staff/trainee-accounts/delete">
         <input type="hidden" name="id" value="">
     </form>
 
